post-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
        - name: post-service
          image: gyongcode/post-service:latest
          ports:
            - containerPort: 8080
